--- a/frontend/src/common/common.scss
+++ b/frontend/src/common/common.scss
@@ -1,2 +1,38 @@
 @import './constants';
 @import './reset';
+
+// MARGIN START
+
+.mb-16 {
+    margin-bottom: 16px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.mb-24 {
+    margin-bottom: 24px;
+}
+
+.mb-32 {
+    margin-bottom: 32px;
+}
+
+.mb-40 {
+    margin-bottom: 40px;
+}
+
+.mb-48 {
+    margin-bottom: 48px;
+}
+
+.mb-64 {
+    margin-bottom: 64px;
+}
+
+.mb-88 {
+    margin-bottom: 88px;
+}
+
+// MARGIN END
