--- a/frontend/src/common/constants.scss
+++ b/frontend/src/common/constants.scss
@@ -21,57 +21,57 @@ $LS_YELLOW_1: #ffdd2d;
 
 @mixin font-h1 {
     color: $LS_GRAY_1;
-    font: 700 44px/1 Roboto sans-serif;
+    font: 700 44px/1 Roboto;
 }
 
 @mixin font-h2 {
     color: $LS_GRAY_1;
-    font: 700 24px/1 Roboto sans-serif;
+    font: 700 24px/1 Roboto;
 }
 
 @mixin font-h3 {
     color: $LS_GRAY_1;
-    font: 600 24px/1 Roboto sans-serif;
+    font: 600 24px/1 Roboto;
 }
 
 @mixin font-h4 {
     color: $LS_GRAY_1;
-    font: 700 18px/1 Roboto sans-serif;
+    font: 700 18px/1 Roboto;
 }
 
 @mixin font-h5 {
     color: $LS_GRAY_1;
-    font: 600 18px/1 Roboto sans-serif;
+    font: 600 18px/1 Roboto;
 }
 
 @mixin font-p1 {
     color: $LS_GRAY_1;
-    font: 400 18px/24px Roboto sans-serif;
+    font: 400 18px/24px Roboto;
 }
 
 @mixin font-p2 {
     color: $LS_GRAY_5;
-    font: 300 15px/1 Roboto sans-serif;
+    font: 300 15px/1 Roboto;
 }
 
 @mixin font-p3 {
     color: $LS_GRAY_1;
-    font: 400 15px/24px Roboto sans-serif;
+    font: 400 15px/24px Roboto;
 }
 
 @mixin font-p4 {
     color: $LS_GRAY_2;
-    font: 400 13px/1 Roboto sans-serif;
+    font: 400 13px/1 Roboto;
 }
 
 @mixin font-p5 {
     color: $LS_GRAY_2;
-    font: 400 11px/1 Roboto sans-serif;
+    font: 400 11px/1 Roboto;
 }
 
 @mixin font-p6 {
     color: $LS_BLUE_1;
-    font: 400 18px/24px Roboto sans-serif;
+    font: 400 18px/24px Roboto;
 }
 
 // TITLES END
