--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -1,4 +1,6 @@
 //- Mixins here
 include ./../components/meta/meta
+include ./../components/button/button
 include ./../components/header/header
 include ./../components/footer/footer
+include ./../components/welcome/welcome
