--- a/frontend/src/templates/desktop/index.pug
+++ b/frontend/src/templates/desktop/index.pug
@@ -4,7 +4,6 @@ html
     head
         +meta()
     body
-        .app
-            +header('Index Desktop')
-            main.main Hello
-            +footer()
+        +header('Index Desktop')
+        +welcome('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+        +footer()
