--- a/frontend/src/components/welcome/welcome.scss
+++ b/frontend/src/components/welcome/welcome.scss
@@ -2,9 +2,21 @@
 
 .welcome {
     @include container;
+    text-align: center;
 
     &__title {
         @include font-h1;
-        text-align: center;
+    }
+
+    &__description {
+        @include font-p1;
+        max-width: 612px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    &__icon {
+        width: 100%;
+        object-fit: contain;
     }
 }
