--- a/frontend/src/components/button/button.scss
+++ b/frontend/src/components/button/button.scss
@@ -1,6 +1,13 @@
-
 @import './../../common/constants';
 
 .button {
-    
+    background: $LS_YELLOW_1;
+    color: $LS_GRAY_1;
+    font-size: 15px;
+    font-weight: 400;
+    padding: 16px 24px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    transition: all 0.3s;
 }
