--- a/frontend/src/components/welcome/welcome.pug
+++ b/frontend/src/components/welcome/welcome.pug
@@ -1,6 +1,8 @@
 mixin welcome(title, description)
     section.welcome
-        h1.welcome__title=title
-        p.welcome__description=description
-        +button('Узнать стоимость')
-        img(src=require('@img/welcome/welcome.svg'), alt=title)
+        h1.welcome__title.mb-40=title
+        p.welcome__description.mb-40=description
+        .welcome__button.mb-74
+            +button('Узнать стоимость')
+        .welcome__image
+            img.welcome__icon(src=require('@img/welcome/welcome.svg'), alt=title)
