--- a/frontend/src/templates/desktop/index.pug
+++ b/frontend/src/templates/desktop/index.pug
@@ -6,4 +6,5 @@ html
     body
         +header('Index Desktop')
         +welcome('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+        +products()
         +footer()
