--- a/frontend/src/templates/mobile/index.pug
+++ b/frontend/src/templates/mobile/index.pug
@@ -4,7 +4,6 @@ html
     head
         +meta()
     body
-        .app
-            +header(1)
-            main.main Hello
-            +footer()
+        +header(1)
+        +welcome-mobile('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+        +footer()
