--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -4,3 +4,4 @@ include ./../components/button/button
 include ./../components/header/header
 include ./../components/footer/footer
 include ./../components/welcome/welcome
+include ./../components/welcome-mobile/welcome-mobile
