--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,9 +1,45 @@
 @import './../../common/constants';
 
 .header {
-    background-color: red;
+    background-color: $LS_WHITE;
 
-    &__title {
-        @include font-h1;
+    &__container {
+        @include container;
+        height: 64px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__logo {
+        @include font-h2;
+    }
+
+    &__menu {
+        margin-left: 52px;
+
+        &:hover .header__menu-item {
+            color: $LS_GRAY_2;
+        }
+    }
+
+    &__menu-item {
+        @include font-p3;
+        margin-right: 24px;
+        transition: color 0.3s;
+        padding: 8px 0;
+
+        &:hover {
+            color: $LS_GRAY_1 !important;
+        }
+    }
+
+    &__phone {
+        margin-left: auto;
+        @include font-p6;
+    }
+
+    &__telegram {
+        margin-left: 44px;
+        display: flex;
     }
 }
