--- a/frontend/src/components/products/products.pug
+++ b/frontend/src/components/products/products.pug
@@ -1,6 +1,6 @@
 mixin products()
-    section.products.mb-88
-        h1.products__title.mb-48 Одностраничный сайт
+    section.products
+        h2.products__title.mb-48 Одностраничный сайт
         .products__wrapper
             .products__column
                 +product({
