--- a/frontend/src/components/welcome/welcome.pug
+++ b/frontend/src/components/welcome/welcome.pug
@@ -1,6 +1,6 @@
 mixin welcome(title, description)
-    section.welcome.mb-88
-        h1.welcome__title.mb-40=title
+    section.welcome
+        h1.welcome__title.mb-48=title
         p.welcome__description.mb-40=description
         .welcome__button.mb-74
             +button('Узнать стоимость')
