--- a/frontend/src/common/common.scss
+++ b/frontend/src/common/common.scss
@@ -45,3 +45,12 @@ body {
 }
 
 // MARGIN END
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
