--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -6,4 +6,11 @@ include ./../components/footer/footer
 include ./../components/welcome/welcome
 include ./../components/welcome-mobile/welcome-mobile
 include ./../components/product/product
+include ./../components/loader/loader
 include ./../components/products/products
+include ./../components/order-item/order-item
+include ./../components/ordering/ordering
+include ./../components/input-field/input-field
+include ./../components/textarea-field/textarea-field
+include ./../components/pricing/pricing
+include ./../components/faq/faq
