--- a/frontend/src/templates/desktop/index.pug
+++ b/frontend/src/templates/desktop/index.pug
@@ -4,7 +4,16 @@ html
     head
         +meta()
     body
-        +header('Index Desktop')
-        +welcome('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
-        +products()
+        .mb-64
+            +header('Index Desktop')
+        .mb-88
+            +welcome('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+        .mb-88
+            +products()
+        .mb-88
+            +ordering('Порядок сотрудничества')
+        .mb-88
+            +pricing('Стоимость сайта')
+        .mb-64 
+            +faq('Вопрос-ответ')
         +footer()
