--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,6 +1,11 @@
 @import './../../common/constants';
 
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
     background-color: $LS_WHITE;
 
     &__container {
