--- a/frontend/src/components/ordering/ordering.pug
+++ b/frontend/src/components/ordering/ordering.pug
@@ -1,5 +1,5 @@
 mixin ordering(title, description)
-    section.ordering
+    section.ordering.pt-88(id='ordering')
         h2.ordering__title.mb-48=title
         .mb-40
             +order-item(1, 'Знакомство с клиентом', 'Изучаем особенности вашего бизнеса, анализируем конкурентов для определения ключевых моментов и их дальнейшего воплощения на сайте.')
