--- a/frontend/src/components/welcome/welcome.pug
+++ b/frontend/src/components/welcome/welcome.pug
@@ -1,8 +1,8 @@
 mixin welcome(title, description)
-    section.welcome
+    section.welcome.pt-128
         h1.welcome__title.mb-48=title
         p.welcome__description.mb-40=description
         .welcome__button.mb-74
-            +button('Узнать стоимость')
+            +button('Узнать стоимость', '#pricing')
         .welcome__image
             img.welcome__icon(src=require('@img/welcome/welcome.svg'), alt=title)
