--- a/frontend/src/components/faq/faq.pug
+++ b/frontend/src/components/faq/faq.pug
@@ -1,5 +1,5 @@
 mixin faq(title)
-    section.faq
+    section.faq.mb-64.pt-88(id='faq')
         h2.faq__title.mb-48=title
         .faq__card
             .faq__card-item.faq__card-item_active
