--- a/frontend/src/components/pricing/pricing.pug
+++ b/frontend/src/components/pricing/pricing.pug
@@ -1,10 +1,10 @@
 mixin pricing(title)
-    section.pricing
+    section.pricing.pt-88(id='pricing')
         h2.pricing__title.mb-48=title
         .pricing__card.pricing__card_active.pricing__card_main
             .pricing__header 
-                .pricing__header-item.pricing__header-item_active.pricing__header-item__primary С нуля
-                .pricing__header-item.pricing__header-pricing__secondary ПО ВАШЕМУ ДИЗАЙНУ
+                .pricing__header-item.pricing__header-item_active.pricing__header-item_primary С нуля
+                .pricing__header-item.pricing__header-item_secondary ПО ВАШЕМУ ДИЗАЙНУ
             .pricing__content.pricing__content_active.pricing__content_primary.mb-48
                 .mb-32
                     +input-field('phone', 'Телефон *', 'Пожалуйста, заполните поле', 'yes')
