--- a/frontend/src/components/product/product.pug
+++ b/frontend/src/components/product/product.pug
@@ -1,4 +1,4 @@
-mixin product(model, dark_blue)
+mixin product(model, dark_blue, link)
     - var resultClass = dark_blue ? 'product product_dark-blue': 'product';
     div(class=resultClass)
         h3.product__title.mb-24=model.title
@@ -6,4 +6,4 @@ mixin product(model, dark_blue)
         .product__wrapper
             img.product__icon(src=model.image, alt=model.title)
             .product__button
-                +button-gray('Узнать стоимость')
+                +button-gray('Узнать стоимость', link, model.type)
