--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -14,3 +14,4 @@ include ./../components/input-field/input-field
 include ./../components/textarea-field/textarea-field
 include ./../components/pricing/pricing
 include ./../components/faq/faq
+include ./../components/page404/page404
