--- a/frontend/src/templates/desktop/p404.pug
+++ b/frontend/src/templates/desktop/p404.pug
@@ -4,6 +4,6 @@ html
     head
         +meta()
     body
-        +header()
-        main.main Страница не нейдена
+        +header(false)
+        +page404()
         +footer()
