--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -7,6 +7,7 @@
     z-index: 100;
     width: 100%;
     background-color: $LS_WHITE;
+    border-bottom: 1px solid $LS_GRAY_3;
 
     &__container {
         @include container;
