--- a/frontend/src/templates/desktop/index.pug
+++ b/frontend/src/templates/desktop/index.pug
@@ -4,7 +4,7 @@ html
     head
         +meta()
     body
-        +header()
+        +header(true)
         +welcome('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
         +products()
         +ordering('Порядок сотрудничества')
