--- a/frontend/src/components/welcome-mobile/welcome-mobile.pug
+++ b/frontend/src/components/welcome-mobile/welcome-mobile.pug
@@ -4,5 +4,5 @@ mixin welcome-mobile(title, description)
         p.welcome-mobile__description.mb-32=description
         .welcome-mobile__button.mb-32
             +button('Узнать стоимость')
-        .welcome-mobile__image
+        .welcome-mobile__image.mb-32
             img.welcome-mobile__icon(src=require('@img/welcome/welcome-mobile.svg'), alt=title)
