--- a/frontend/src/templates/mobile/index.pug
+++ b/frontend/src/templates/mobile/index.pug
@@ -4,6 +4,9 @@ html
     head
         +meta()
     body
-        +header(1)
-        +welcome-mobile('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+        .mb-64
+            +header(1)
+        .mb-64
+            +welcome-mobile('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+            +products-mobile()
         +footer()
