--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -6,8 +6,10 @@ include ./../components/footer/footer
 include ./../components/welcome/welcome
 include ./../components/welcome-mobile/welcome-mobile
 include ./../components/product/product
+include ./../components/product-mobile/product-mobile
 include ./../components/loader/loader
 include ./../components/products/products
+include ./../components/products-mobile/products-mobile
 include ./../components/order-item/order-item
 include ./../components/ordering/ordering
 include ./../components/input-field/input-field
