Added mobile footer header and page 404

--- a/frontend/src/templates/mobile/p404.pug
+++ b/frontend/src/templates/mobile/p404.pug
@@ -4,6 +4,6 @@ html
     head
         +meta()
     body
-        +header()
-        main.main Страница не нейдена
-        +footer()
+        +header-mobile-error404()
+        +page404-mobile()
+        +footer-mobile()
