--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -2,7 +2,10 @@
 include ./../components/meta/meta
 include ./../components/button/button
 include ./../components/header/header
+include ./../components/header-mobile/header-mobile
+include ./../components/header-mobile-error404/header-mobile-error404
 include ./../components/footer/footer
+include ./../components/footer-mobile/footer-mobile
 include ./../components/welcome/welcome
 include ./../components/welcome-mobile/welcome-mobile
 include ./../components/product/product
@@ -17,3 +20,4 @@ include ./../components/textarea-field/textarea-field
 include ./../components/pricing/pricing
 include ./../components/faq/faq
 include ./../components/page404/page404
+include ./../components/page404-mobile/page404-mobile
