ordering, pricing mobile

--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -12,8 +12,12 @@ include ./../components/products/products
 include ./../components/products-mobile/products-mobile
 include ./../components/order-item/order-item
 include ./../components/ordering/ordering
+include ./../components/order-item-mobile/order-item-mobile
+include ./../components/ordering-mobile/ordering-mobile
 include ./../components/input-field/input-field
 include ./../components/textarea-field/textarea-field
 include ./../components/pricing/pricing
+include ./../components/pricing-mobile/pricing-mobile
 include ./../components/faq/faq
 include ./../components/page404/page404
+
