--- a/frontend/src/templates/mobile/index.pug
+++ b/frontend/src/templates/mobile/index.pug
@@ -9,4 +9,6 @@ html
         .mb-64
             +welcome-mobile('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
             +products-mobile()
+            +ordering-mobile('Порядок сотрудничества')
+            +pricing-mobile('Стоимость сайта')
         +footer()
