--- a/frontend/src/templates/mobile/index.pug
+++ b/frontend/src/templates/mobile/index.pug
@@ -4,11 +4,12 @@ html
     head
         +meta()
     body
-        .mb-64
-            +header(1)
-        .mb-64
+        +header-mobile() 
+        .pt-128
             +welcome-mobile('Разработка одностраничного сайта', 'Мы предлагаем разработку одностраничного сайта любой сложности по низким ценам с гарантией технической поддержки в течении года')
+        .pt-88 
             +products-mobile()
+        .pt-88
             +ordering-mobile('Порядок сотрудничества')
             +pricing-mobile('Стоимость сайта')
-        +footer()
+        +footer-mobile()
