--- a/frontend/src/components/product-mobile/product-mobile.scss
+++ b/frontend/src/components/product-mobile/product-mobile.scss
@@ -3,7 +3,7 @@
 .product-mobile {
     border-radius: 24px;
     background: $LS_GRAY_4;
-    padding: 12px 30px 0;
+    padding: 12px 30px 32px;
     text-align: center;
 
     &_dark-blue {
