--- a/frontend/src/components/products-mobile/products-mobile.scss
+++ b/frontend/src/components/products-mobile/products-mobile.scss
@@ -1,19 +1,11 @@
 @import './../../common/constants';
 
 .products-mobile {
-    @include container;
+    @include container-mobile;
     text-align: center;
 
     &__title {
         @include font-h2;
     }
 
-
-    &__column {
-        padding-left: 8px;
-        padding-right: 8px;
-        max-width: 100%;
-        flex: 1 0 50%;
-        flex-direction: column;
-    }
 }
