--- a/frontend/src/components/ordering-mobile/ordering-mobile.pug
+++ b/frontend/src/components/ordering-mobile/ordering-mobile.pug
@@ -1,5 +1,5 @@
 mixin ordering-mobile(title, description)
-    section.ordering-mobile(id='ordering-mobile')
+    section.ordering-mobile.pt-88(id='ordering')
         h2.ordering-mobile__title.mb-32=title
         .mb-24
             +order-item-mobile(1, 'Знакомство с клиентом', 'Изучаем особенности вашего бизнеса, анализируем конкурентов для определения ключевых моментов и их дальнейшего воплощения на сайте.')
