--- a/frontend/src/templates/mobile/index.pug
+++ b/frontend/src/templates/mobile/index.pug
@@ -10,4 +10,5 @@ html
         +products-mobile()
         +ordering-mobile('Порядок сотрудничества')
         +pricing-mobile('Стоимость сайта')
+        +faq-mobile('Вопрос-ответ')
         +footer-mobile()
