--- a/frontend/src/common/mixins.pug
+++ b/frontend/src/common/mixins.pug
@@ -23,5 +23,5 @@ include ./../components/pricing/pricing
 include ./../components/pricing-mobile/pricing-mobile
 include ./../components/faq/faq
 include ./../components/page404/page404
-
+include ./../components/faq-mobile/faq-mobile
 include ./../components/page404-mobile/page404-mobile
