--- a/frontend/src/components/pricing-mobile/pricing-mobile.pug
+++ b/frontend/src/components/pricing-mobile/pricing-mobile.pug
@@ -1,6 +1,6 @@
 mixin pricing-mobile(title)
-    section.pricing-mobile.pt-88(id='pricing-mobile')
-        h2.pricing-mobile__title.mb-48=title
+    section.pricing-mobile.pt-88(id='pricing')
+        h2.pricing-mobile__title.mb-32=title
         .pricing-mobile__card.pricing-mobile__card_active.pricing-mobile__card_main
             .pricing-mobile__header 
                 .pricing-mobile__header-item.pricing-mobile__header-item_active.pricing-mobile__header-item_primary С нуля
@@ -19,7 +19,7 @@ mixin pricing-mobile(title)
                 +textarea-field('comments', 'Дополнительная информация')
             .pricing-mobile__content-footer 
                 .pricing-mobile__content-footer-text Ввод номера телефона подтверждает ваше согласие c условиями передачи информации
-                +button('Отправить') 
+                +button('Отправить')
         .pricing-mobile__card.pricing-mobile__card_spinner 
             +loader()
         .pricing-mobile__card.pricing-mobile__card_thank-you 
