Update scripts loading

--- a/frontend/src/components/faq/faq.pug
+++ b/frontend/src/components/faq/faq.pug
@@ -3,17 +3,17 @@ mixin faq(title)
         h2.faq__title.mb-48=title
         .faq__card
             .faq__card-item.faq__card-item_active
-                h4.faq__card-item-title Первый вопрос
+                h4.faq__card-item-title Кому подойдет одностраничный сайт
+                .faq__card-item-description 
+                    p.faq__card-item-description-value 3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+            .faq__card-item
+                h4.faq__card-item-title Стоимость одностраничного сайта
                 .faq__card-item-description
                     p.faq__card-item-description-value 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
             .faq__card-item
-                h4.faq__card-item-title Второй вопрос
+                h4.faq__card-item-title За какое время можно сделать одностраничный сайт
                 .faq__card-item-description
                     p.faq__card-item-description-value 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
-            .faq__card-item
-                h4.faq__card-item-title Третий вопрос
-                .faq__card-item-description 
-                    p.faq__card-item-description-value 3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
             
             
         
