Bug fix and added content

--- a/frontend/src/components/faq/faq.pug
+++ b/frontend/src/components/faq/faq.pug
@@ -5,15 +5,15 @@ mixin faq(title)
             .faq__card-item.faq__card-item_active
                 h4.faq__card-item-title Кому подойдет одностраничный сайт
                 .faq__card-item-description 
-                    p.faq__card-item-description-value 3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+                    p.faq__card-item-description-value Одностраничный сайт подойдет для тех кто начинает свое дело. Это идеально подходит малому и среднему бизнесу, отличный инструмент для рекламных страниц.
             .faq__card-item
                 h4.faq__card-item-title Стоимость одностраничного сайта
                 .faq__card-item-description
-                    p.faq__card-item-description-value 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+                    p.faq__card-item-description-value Стоимость на одностраничный сайт может варьироваться от 300 рублей и достигать несколько тысяч. Это зависит от сложности и количества секций на странице.
             .faq__card-item
                 h4.faq__card-item-title За какое время можно сделать одностраничный сайт
                 .faq__card-item-description
-                    p.faq__card-item-description-value 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+                    p.faq__card-item-description-value В среднем это занимает 5-7 дней. Это зависит от сложности и количества секций на сайте.
             
             
         
