--- a/frontend/src/components/faq-mobile/faq-mobile.pug
+++ b/frontend/src/components/faq-mobile/faq-mobile.pug
@@ -3,17 +3,17 @@ mixin faq-mobile(title)
         h2.faq-mobile__title.mb-32=title
         .faq-mobile__card
             .faq-mobile__card-item.faq-mobile__card-item_active
-                h4.faq-mobile__card-item-title Первый вопрос
+                h4.faq-mobile__card-item-title Кому подойдет одностраничный сайт
                 .faq-mobile__card-item-description
-                    p.faq-mobile__card-item-description-value 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+                    p.faq-mobile__card-item-description-value Одностраничный сайт подойдет для тех кто начинает свое дело. Это идеально подходит малому и среднему бизнесу, отличный инструмент для рекламных страниц.
             .faq-mobile__card-item
-                h4.faq-mobile__card-item-title Второй вопрос
+                h4.faq-mobile__card-item-title Стоимость одностраничного сайта
                 .faq-mobile__card-item-description
-                    p.faq-mobile__card-item-description-value 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+                    p.faq-mobile__card-item-description-value Стоимость на одностраничный сайт может варьироваться от 300 рублей и достигать несколько тысяч. Это зависит от сложности и количества секций на странице.
             .faq-mobile__card-item
-                h4.faq-mobile__card-item-title Третий вопрос
+                h4.faq-mobile__card-item-title За какое время можно сделать одностраничный сайт
                 .faq-mobile__card-item-description 
-                    p.faq-mobile__card-item-description-value 3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius amet culpa inventore molestias id. A facilis enim similique dolores odio quibusdam sunt voluptatibus accusamus numquam tenetur adipisci quae, amet aliquam? Deleniti, sunt.
+                    p.faq-mobile__card-item-description-value В среднем это занимает 5-7 дней. Это зависит от сложности и количества секций на сайте.
             
             
         
