Optimize speed view page

--- a/frontend/src/components/footer-mobile/footer-mobile.pug
+++ b/frontend/src/components/footer-mobile/footer-mobile.pug
@@ -8,7 +8,7 @@ mixin footer-mobile
                     a.footer-mobile__phone(href="tel:80295558386") 8 029 555-83-86
                 .footer-mobile__phone-label.mb-20 Для звонков по Беларуси
                 a(href="https://t.me/zanko_av" class="footer-mobile__telegram")
-                    img(src=require('@img/icons/telegram-gray.svg'), class='footer-mobile__telegram-icon')
+                    img(src=require('@img/icons/telegram-gray.svg'), alt='telegram',  class='footer-mobile__telegram-icon')
         .footer-mobile__bottom
             .footer-mobile__bottom-container
                 .footer-mobile__bottom-copy © 2020—2023, ООО «Лайтнинг Софт»
