--- a/frontend/src/components/footer/footer.pug
+++ b/frontend/src/components/footer/footer.pug
@@ -10,4 +10,4 @@ mixin footer
             .footer__bottom-container
                 .footer__copy © 2020—2023, ООО «Лайтнинг Софт»
                 a(href="https://t.me/zanko_av" class="footer__telegram")
-                    img(src=require('@img/icons/telegram-gray.svg'), class='footer__telegram-icon')
+                    img(src=require('@img/icons/telegram-gray.svg'), alt='telegram', class='footer__telegram-icon')
