--- a/frontend/src/components/header-mobile-error404/header-mobile-error404.pug
+++ b/frontend/src/components/header-mobile-error404/header-mobile-error404.pug
@@ -3,16 +3,16 @@ mixin header-mobile-error404()
         .header-mobile__container
             a(href="/", class="header-mobile__logo") Lightning Soft
             .header-mobile__menu
-                img(src=require('@img/icons/menu.svg'), class='header__menu-icon')
+                img(src=require('@img/icons/menu.svg'), alt="Меню", class='header__menu-icon')
         .header-mobile__navigation 
             .header-mobile__navigation-top
                 a(href="/", class="header-mobile__logo") Lightning Soft
                 .header-mobile__close
-                    img(src=require('@img/icons/close.svg'), class='header__close-icon')
+                    img(src=require('@img/icons/close.svg'), alt="Close", class='header__close-icon')
             .header-mobile__navigation-bottom
                 .header-mobile__navigation-bottom-calls 
                     a(href="tel:375295558386" class="header-mobile__navigation-bottom-phone") +375 29 555 83 86
                     a(href="https://t.me/zanko_av" class="header-mobile__telegram")
-                        img(src=require('@img/icons/telegram.svg'), class='header__telegram-icon')
+                        img(src=require('@img/icons/telegram.svg'), alt="telegram", class='header__telegram-icon')
 
 
