--- a/frontend/src/components/order-item/order-item.pug
+++ b/frontend/src/components/order-item/order-item.pug
@@ -2,6 +2,6 @@ mixin order-item(number, title, description)
     .order-item
         .order-item__number=number
         .order-item__card
-            h4.order-item__title.mb-16=title
-            h4.order-item__description=description
+            h3.order-item__title.mb-16=title
+            p.order-item__description=description
         
