--- a/frontend/src/components/pricing-mobile/pricing-mobile.pug
+++ b/frontend/src/components/pricing-mobile/pricing-mobile.pug
@@ -25,7 +25,7 @@ mixin pricing-mobile(title)
         .pricing-mobile__card.pricing-mobile__card_thank-you 
             .pricing-mobile__card-title.mb-16 Поздравляем!
             .pricing-mobile__card-description.mb-40 Заявка отправлена, мы свяжемся с Вами в ближайшее время
-            img.pricing-mobile__card-icon(src=require('@img/products/img_1.svg'))
+            img.pricing-mobile__card-icon(src=require('@img/products/img_1.svg'), alt='Успех')
 
     
         
