--- a/frontend/src/components/order-item-mobile/order-item-mobile.pug
+++ b/frontend/src/components/order-item-mobile/order-item-mobile.pug
@@ -2,6 +2,6 @@ mixin order-item-mobile(number, title, description)
     .order-item-mobile
         .order-item-mobile__number=number
         .order-item-mobile__card
-            h4.order-item-mobile__title.mb-16=title
-            h4.order-item-mobile__description=description
+            h3.order-item-mobile__title.mb-16=title
+            p.order-item-mobile__description=description
         
