--- a/frontend/src/components/pricing/pricing.pug
+++ b/frontend/src/components/pricing/pricing.pug
@@ -25,7 +25,7 @@ mixin pricing(title)
         .pricing__card.pricing__card_thank-you 
             .pricing__card-title.mb-16 Поздравляем!
             .pricing__card-description.mb-40 Заявка отправлена, мы свяжемся с Вами в ближайшее время
-            img.pricing__card-icon(src=require('@img/products/img_1.svg'))
+            img.pricing__card-icon(src=require('@img/products/img_1.svg'), alt='Успех')
 
     
         
