--- a/frontend/src/components/header/header.pug
+++ b/frontend/src/components/header/header.pug
@@ -10,6 +10,6 @@ mixin header(showMenu)
                     a(href="#faq" class="header__menu-item") Вопрос-ответ
             a(href="tel:375295558386" class="header__phone") +375 29 555 83 86
             a(href="https://t.me/zanko_av" class="header__telegram")
-                img(src=require('@img/icons/telegram.svg'),alt='telegram', class='header__telegram-icon')
+                img(width="24", height="24", src=require('@img/icons/telegram.svg'),alt='telegram', class='header__telegram-icon')
 
 
