--- a/frontend/src/components/pricing-mobile/pricing-mobile.pug
+++ b/frontend/src/components/pricing-mobile/pricing-mobile.pug
@@ -19,7 +19,7 @@ mixin pricing-mobile(title)
                 +textarea-field('comments', 'Дополнительная информация')
             .pricing-mobile__content-footer 
                 .pricing-mobile__content-footer-text Ввод номера телефона подтверждает ваше согласие c условиями передачи информации
-                +button('Отправить')
+                +button-form('Отправить')
         .pricing-mobile__card.pricing-mobile__card_spinner 
             +loader()
         .pricing-mobile__card.pricing-mobile__card_thank-you 
