--- a/frontend/src/components/pricing/pricing.pug
+++ b/frontend/src/components/pricing/pricing.pug
@@ -19,7 +19,7 @@ mixin pricing(title)
                 +textarea-field('comments', 'Дополнительная информация')
             .pricing__content-footer 
                 .pricing__content-footer-text Ввод номера телефона подтверждает ваше согласие c условиями передачи информации
-                +button('Отправить') 
+                +button-form('Отправить') 
         .pricing__card.pricing__card_spinner 
             +loader()
         .pricing__card.pricing__card_thank-you 
