--- a/frontend/src/components/welcome-mobile/welcome-mobile.pug
+++ b/frontend/src/components/welcome-mobile/welcome-mobile.pug
@@ -5,4 +5,4 @@ mixin welcome-mobile(title, description)
         .welcome-mobile__button.mb-32
             +button('Узнать стоимость', '#pricing')
         .welcome-mobile__image
-            img.welcome-mobile__icon(src=require('@img/welcome/welcome-mobile.svg'), alt=title)
+            img.welcome-mobile__icon(width="334" height="263" src=require('@img/welcome/mobile_main.png'), alt=title)
