--- a/frontend/src/components/welcome/welcome.pug
+++ b/frontend/src/components/welcome/welcome.pug
@@ -4,5 +4,5 @@ mixin welcome(title, description)
         p.welcome__description.mb-40=description
         .welcome__button.mb-74
             +button('Узнать стоимость', '#pricing')
-        .welcome__image
-            img.welcome__icon(src=require('@img/welcome/welcome.svg'), alt=title)
+        .welcome__image 
+            img.welcome__icon(width="1009" height="525" src=require('@img/welcome/desktop_main.png'), alt=title)
