--- a/frontend/src/components/welcome/welcome.scss
+++ b/frontend/src/components/welcome/welcome.scss
@@ -16,7 +16,7 @@
     }
 
     &__icon {
-        width: 100%;
-        object-fit: contain;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
