--- a/frontend/src/components/welcome-mobile/welcome-mobile.scss
+++ b/frontend/src/components/welcome-mobile/welcome-mobile.scss
@@ -19,7 +19,7 @@
     }
 
     &__icon {
-        width: 100%;
-        object-fit: contain;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
