--- a/frontend/src/components/footer-mobile/footer-mobile.pug
+++ b/frontend/src/components/footer-mobile/footer-mobile.pug
@@ -5,9 +5,9 @@ mixin footer-mobile
                 .mb-20
                     a.footer-mobile__logo(href="/") Lightning Soft
                 .footer-mobile__phone-wrapper
-                    a.footer-mobile__phone(href="tel:80295558386") 8 029 555-83-86
+                    a.footer-mobile__phone(id="footer-phone" href="tel:80295558386") 8 029 555-83-86
                 .footer-mobile__phone-label.mb-20 Для звонков по Беларуси
-                a(href="https://t.me/zanko_av" class="footer-mobile__telegram")
+                a(id="footer-telegram" href="https://t.me/zanko_av" class="footer-mobile__telegram")
                     img(width="24", height="24", src=require('@img/icons/telegram-gray.svg'), alt='telegram',  class='footer-mobile__telegram-icon')
         .footer-mobile__bottom
             .footer-mobile__bottom-container
