--- a/frontend/src/components/header-mobile-error404/header-mobile-error404.pug
+++ b/frontend/src/components/header-mobile-error404/header-mobile-error404.pug
@@ -11,8 +11,8 @@ mixin header-mobile-error404()
                     img(width="24", height="24", src=require('@img/icons/close.svg'), alt="Close", class='header__close-icon')
             .header-mobile__navigation-bottom
                 .header-mobile__navigation-bottom-calls 
-                    a(href="tel:375295558386" class="header-mobile__navigation-bottom-phone") +375 29 555 83 86
-                    a(href="https://t.me/zanko_av" class="header-mobile__telegram")
+                    a(id="header-phone" href="tel:375295558386" class="header-mobile__navigation-bottom-phone") +375 29 555 83 86
+                    a(id="header-telegram" href="https://t.me/zanko_av" class="header-mobile__telegram")
                         img(width="24", height="24", src=require('@img/icons/telegram.svg'), alt="telegram", class='header__telegram-icon')
 
 
