--- a/frontend/src/components/header/header.pug
+++ b/frontend/src/components/header/header.pug
@@ -8,8 +8,8 @@ mixin header(showMenu)
                     a(href="#ordering" class="header__menu-item") Порядок сотрудничества
                     a(href="#pricing" class="header__menu-item") Стоимость сайта
                     a(href="#faq" class="header__menu-item") Вопрос-ответ
-            a(href="tel:375295558386" class="header__phone") +375 29 555 83 86
-            a(href="https://t.me/zanko_av" class="header__telegram")
+            a(id="header-phone" href="tel:375295558386" class="header__phone") +375 29 555 83 86
+            a(id="header-telegram" href="https://t.me/zanko_av" class="header__telegram")
                 img(width="24", height="24", src=require('@img/icons/telegram.svg'),alt='telegram', class='header__telegram-icon')
 
 
